(executable
 (name main)
 (modes js)
 (js_of_ocaml
  (flags
   (:standard --effects=cps)))
 (libraries
  core
  bonsai
  bonsai_web
  virtual_dom
  js_of_ocaml
  jsip_types
  jsip_dashboard_protocol
  jsip_dashboard_controller)
 (preprocess
  (pps ppx_jane bonsai.ppx_bonsai ppx_html js_of_ocaml-ppx)))
